--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 												margin: 0;
 												padding: 0;
 								}
+					@media (prefers-color-scheme: dark) {
+						
+ body{
+    background:white;
+    color:black;
+
+}
+
 								. container{
 												display: flex;
 												justify-content: center;
